# git-graph-branch

./: .flake8  .gitignore  BRANCH_GOAL.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: key.txt
git_graph_branch/: __init__.py  cli.py  dag.py  display.py  git.py  main.py
git_graph_branch/git/: __init__.py  bloom.py  branch.py  branch_algos.py  commit.py  commit_algos.py  commit_containers.py  config.py  decode.py  file_algos.py  object.py  pack.py  path.py  reflog.py
git_graph_branch/ixnay/: __init__.py  _async.py  _cache.py  _nixer.py  _tracker.py  testing.py
git_graph_branch/nix/: __init__.py  cohort.py  console.py  contextvars.py  linux.py  loop.py  macosx.py  patching.py  polling.py  tracking.py  watchers.py
test/: conftest.py  test_git.py
test/doctest/: test_doctests.py
test/integration/: test_entrypoint.py  test_nix.py  test_nix_linux.py  test_nix_macosx.py  utils.py
test/unit/dag/: test_add_node_art.py  test_dag_class.py  test_node_art.py  test_partially_ordered.py  test_sanitized_parents.py
test/unit/git/: conftest.py  test_all_parents.py  test_bloom.py  test_branch_commit.py  test_branch_reflog.py  test_branch_reflog_reversed.py  test_branch_upstream.py  test_branch_upstream_commit.py  test_branches.py  test_closeables_cache.py  test_commit.py  test_commit_map.py  test_commit_queue.py  test_commit_set.py  test_commit_window.py  test_common_ancestor.py  test_common_ancestry.py  test_compute_branch_dag.py  test_config.py  test_decode.py  test_git_object.py  test_last_merged_commit.py  test_merge_commits.py  test_merge_reverse_chronological.py  test_pack.py  test_pack_data.py  test_pack_index.py  test_packed_ref.py  test_packs.py  test_parse_config.py  test_pooled_binary_reader.py  test_range.py  test_reachable_commits.py  test_readlines_reversed.py  test_reflog_from_line.py  test_remote_branch.py  test_unmerged_commits.py  test_worktree_branches.py  utils.py
test/unit/git/data/: example.idx  example.pack  large.idx
test/unit/ixnay/: test_watch_path.py
test/unit/nix/: test_should_nix.py
