[project]
name = "git-graph-branch"
version = "0.1.0"
description = "Terminal tool to graph git branches and branch metadata"
authors = [
    { name = "Alice Purcell", email = "Alice.Purcell.39@gmail.com" },
]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
git-graph-branch = "git_graph_branch:main"

[tool.isort]
profile = "black"

[tool.mypy]
strict = "True"
files = "git_graph_branch,test"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
