[project]
name = "git-graph-branch"
version = "0.1.0"
description = "Terminal tool to graph git branches and branch metadata"
authors = [
    { name = "Alice Purcell", email = "Alice.Purcell.39@gmail.com" },
]
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.scripts]
git-graph-branch = "git_graph_branch:main"

[tool.mypy]
python_version = "3.12"
strict = "True"
files = "git_graph_branch,test"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [
    "E501",  # Line too long
]
isort.split-on-trailing-comma = false

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
